убрал ResponseEntity, заменил .collect(Collectors.toList()) на .toList(), заменил String на Rarity